# sheets

./: .gitignore  .pre-commit-config.yaml  README.md  logging.json  pyproject.toml
src/sheet_ripper/: __init__.py  __main__.py  cli.py  service.py  sheets.py  writer.py
