[project]
name = "sheet-ripper"
version = "0.1.0"
description = "Downloads google sheets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
